kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloword-app
  template:
    metadata:
      labels:
        app: helloword-app
    spec:
      containers:
        - name: helloword-app
          image: jayuser/helloword-app:latest
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8090
