kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloword-app
  namespace: default
  labels:
    app: helloword-app
spec:
  selector:
    app: helloword-app
  type: ClusterIP
  ports:
    - name: http
      port: 8090
