kubernetes/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloword-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: helloword-app
              servicePort: 8090
